<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".EditFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/input_id_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/input_id_label_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/input_id_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/hint_id"
            android:inputType="number"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_id_label" />

        <TextView
            android:id="@+id/input_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/input_name_label_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_id_edit_text" />

        <EditText
            android:id="@+id/input_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_name_label" />

        <TextView
            android:id="@+id/input_email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/input_email_label_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_name_edit_text" />

        <EditText
            android:id="@+id/input_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/hint_email"
            android:inputType="textWebEmailAddress"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_email_label" />

        <TextView
            android:id="@+id/input_mobile_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/input_mobile_label_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_email_edit_text" />

        <EditText
            android:id="@+id/input_mobile_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/hint_mobile"
            android:inputType="phone"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_mobile_label" />

        <TextView
            android:id="@+id/input_dob_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/input_dob_label_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_mobile_edit_text" />

        <EditText
            android:id="@+id/input_dob_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/hint_dob"
            android:inputType="none"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_dob_label" />

        <ImageButton
            android:id="@+id/input_select_date_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/teal_200"
            android:contentDescription="@string/input_date_pick_btn_desc"
            android:elevation="4dp"
            android:src="@drawable/ic_calender_24"
            app:layout_constraintBottom_toBottomOf="@+id/input_dob_edit_text"
            app:layout_constraintCircleRadius="16dp"
            app:layout_constraintStart_toEndOf="@+id/input_dob_edit_text"
            app:layout_constraintTop_toTopOf="@+id/input_dob_edit_text" />

        <TextView
            android:id="@+id/input_error_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:drawablePadding="8dp"
            android:fontFamily="serif"
            android:gravity="start|fill_vertical"
            android:text="@string/input_error_text"
            android:textAlignment="textStart"
            android:textColor="#FF0000"
            app:drawableLeftCompat="@drawable/ic_error_outline_24"
            app:drawableTint="#FF0000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_dob_edit_text" />

        <Button
            android:id="@+id/input_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/input_save_btn_text"
            app:icon="@drawable/ic_save_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_error_text_view" />

        <Button
            android:id="@+id/input_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/input_cancel_btn_text"
            android:textColor="@color/black"
            app:icon="@drawable/ic_clear_24"
            app:iconTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_error_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
